Fixed y-scrollbar problem Fixed card calc width

--- a/src/style.scss
+++ b/src/style.scss
@@ -28,6 +28,8 @@ li{
 
   transform: scale(1.3);
 
+  translate: -31px 0;
+
   margin-bottom: 14px;
 }
 
